feat: expand onboarding flow and meta assets

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,14 +4,14 @@
   "description": "AI-driven fitness training. No bullshit. Pure performance. Brutally effective.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f5f5f5",
+  "background_color": "#000000",
   "theme_color": "#ccff33",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/icon.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     }
   ],
@@ -23,16 +23,14 @@
       "short_name": "Workout",
       "description": "Begin a new training session",
       "url": "/session",
-      "icons": [{ "src": "/favicon.png", "sizes": "512x512" }]
+      "icons": [{ "src": "/icon.svg", "sizes": "512x512", "type": "image/svg+xml" }]
     },
     {
       "name": "Dashboard",
       "short_name": "Dashboard",
       "description": "View your training protocol",
       "url": "/dashboard",
-      "icons": [{ "src": "/favicon.png", "sizes": "512x512" }]
+      "icons": [{ "src": "/icon.svg", "sizes": "512x512", "type": "image/svg+xml" }]
     }
   ]
 }
-
-
