feat: Complete Phase 2 - Firebase Auth, Data Connect & Workout Generation
## Backend & Persistence
- Firebase Authentication with Google Sign-In and email/password
- Firebase Data Connect (Cloud SQL PostgreSQL) for workouts/sessions
- Firestore for user profiles and exercise database (868 exercises)
- Workout generation service with equipment-aware exercise selection
- API routes: workouts, sessions, exercises, user profile

## Frontend
- Auth flow: Landing → Auth → Onboarding → Dashboard
- Real-time data hooks: useWorkouts, useSessions, useExercise
- Schedule editor for workout day management
- Training plan reset functionality
- Exercise notes, swap, and skip features

## Infrastructure
- Firebase Admin SDK configuration
- Google Auth library for server-side authentication
- Data Connect schema and queries (GraphQL)
- Type-safe generated SDK for Data Connect

## UX Improvements
- Fixed onboarding race condition with 3-second delay
- Soft gray borders and rounded corners throughout
- Mobile-first responsive design

Ready for Railway deployment with required environment variables.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
+# Dependencies
 node_modules
+
+# Build output
 dist
+
+# macOS
 .DS_Store
+
+# Vite
 server/public
 vite.config.ts.*
+
+# Archives
 *.tar.gz
+
+# Environment files (NEVER commit secrets)
+.env
+.env.local
+.env.*.local
+
+# Debug logs
+*.log
+pglite-debug.log
+dataconnect-debug.log
+
+# External datasets (already imported to Firestore)
+free-exercise-db/
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# Firebase emulator data
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
