fix: Bypass npm prestart script by using node directly in production
The prestart script tries to rebuild with vite, but vite is a devDependency
and not available in the production container. Since the build already
happened in the Docker builder stage, we run node directly.

--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,8 @@ builder = "dockerfile"
 dockerfilePath = "Dockerfile"
 
 [deploy]
+# Run node directly - bypass npm start which triggers prestart rebuild
+startCommand = "node dist/index.js"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
