Add AI coach infrastructure and update dependencies
- Add AI coach routes and services (provider, context, prompts, tools)
- Add use-coach hook for frontend integration
- Update Coach page with AI integration
- Update middleware and routes for AI features
- Update ROADMAP.md with progress
- Update package dependencies

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "notes": "removed framer motion dependency",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@iron-ai/dataconnect": "file:dataconnect-generated/js",
     "@jridgewell/trace-mapping": "^0.3.25",
